Fix CSS syntax error in account page and align product info to top

--- a/src/app/product/[id]/page.module.css
+++ b/src/app/product/[id]/page.module.css
@@ -111,7 +111,7 @@
 .info {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .title {
